- fixed ie vertical alignment of the content - provided a value to the fb id, in order to make the app runnable after checkout

--- a/web-app/css/landing.css
+++ b/web-app/css/landing.css
@@ -51,8 +51,9 @@ body{
 	width:100%;
 }
 
-.content{
-	margin: auto 5px;
+.content{	
+	display:table;
+	height:100%
 }
 
 .content div{
@@ -60,7 +61,8 @@ body{
 }
 
 .main-content{
-	height: 100%;	
+	display:table-cell;
+	vertical-align:middle;
 }
 
 .title{
